src/test/resources/tests/run-pass/typeck/let.rs
fn main() {
    let a: int = 0;

    println(a);
}